--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <input type="number" id="squareSide" name="Isi" placeholder="Isi(CM)">
         </div>
         <p>L = S X S</p>
+        <p>L = <span id="oke"></span></p>
         <p>L = <span id="Luas"></span></p>
         <div class="button">
             <button onclick="jumlah()">Hitung</button>
@@ -51,6 +52,7 @@
             <input type="number" id="Keliling" name="Isi" placeholder="Isi(CM)">
         </div>
         <p>K = 4 X S</p>
+        <p>K = <span id="oke1"></span></p>
         <p>K = <span id="kel"></span></p>
         <div class="button" id="Hitung">
             <button onclick="Result()">Hitung</button>
