--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <div class="button">
             <button onclick="jumlah()">Hitung</button>
         </div>
+        <div class="buttonReset" id="Reset">
+            <button onclick="resetBtn()">Reset</button>
+        </div>
         <h1 class="Navbar" id="luasPersegi">Keliling Persegi</h1>
         <div>
             <img src="Assets/persegi-pqrs.webp" width= 400px height= 280px>
@@ -56,6 +59,9 @@
         <p>K = <span id="kel"></span></p>
         <div class="button" id="Hitung">
             <button onclick="Result()">Hitung</button>
+        </div>
+        <div class="buttonReset" id="Reset">
+            <button onclick="buttonReset()">Reset</button>
         </div>
     </main>
     
